cabecalho-imagem-color-

--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-header{
-    background-color:#DBC5D6;
+*{
+    margin:0;
+    padding:o;
+}
+.cabecalho{
+    background-color:#e2a6e4;
     color: black;
+}
+.imagem-logo{
+ width: 15%;
+ height: 10%;
+ display: flex;
 }
